Update vendored Jenesis to 0.6.1
Refreshed build/jenesis from the 0.6.1 sources jar via the installer (was 0.4.1).