@@ -60,7 +60,8 @@ public abstract class ProcessBuildStep implements BuildStep {
             }
             properties.put(entry.getKey(), folderMap);
         }
-        return process(executor, context, arguments, properties).thenComposeAsync(processed -> {
+        AtomicReference<Thread> worker = new AtomicReference<>();
+        CompletableFuture<BuildStepResult> result = process(executor, context, arguments, properties).thenComposeAsync(processed -> {
             if (processed == null) {
                 return CompletableFuture.completedStage(new BuildStepResult(true));
             }
@@ -80,7 +81,7 @@ public abstract class ProcessBuildStep implements BuildStep {
                 Path output = context.supplement().resolve("output"), error = context.supplement().resolve("error");
                 ProcessHandler handler = factory.apply(Stream.concat(prepended.stream(), processed.stream()).toList());
                 Files.writeString(context.supplement().resolve("command"), String.join(" ", handler.commands()));
-                if (Boolean.getBoolean("jenesis.verbose")) {
+                if (Boolean.getBoolean("jenesis.print.command")) {
                     System.out.printf("%s%-11s%s %s%n",
                         BuildExecutorCallback.YELLOW,
                         "[EXECUTED]",
@@ -88,13 +89,16 @@ public abstract class ProcessBuildStep implements BuildStep {
                         String.join(" ", handler.commands()));
                 }
                 executor.execute(() -> {
+                    worker.set(Thread.currentThread());
                     try {
                         int exitCode = handler.execute(output, error);
                         if (acceptableExitCode(exitCode, executor, context, arguments)) {
                             future.complete(new BuildStepResult(true));
                         } else {
-                            String outputString = Files.exists(output) ? Files.readString(output) : "";
-                            String errorString = Files.exists(error) ? Files.readString(error) : "";
+                            String outputString = Files.exists(output)
+                                    ? new String(Files.readAllBytes(output), StandardCharsets.UTF_8) : "";
+                            String errorString = Files.exists(error)
+                                    ? new String(Files.readAllBytes(error), StandardCharsets.UTF_8) : "";
                             throw new IllegalStateException("Unexpected exit code: " + exitCode + "\n"
                                     + "To reproduce, execute:\n " + String.join(" ", handler.commands())
                                     + (outputString.isBlank() ? "" : ("\n\nOutput:\n" + outputString))
@@ -102,6 +106,8 @@ public abstract class ProcessBuildStep implements BuildStep {
                         }
                     } catch (Throwable t) {
                         future.completeExceptionally(t);
+                    } finally {
+                        worker.set(null);
                     }
                 });
                 return future;
@@ -109,6 +115,15 @@ public abstract class ProcessBuildStep implements BuildStep {
                 future.completeExceptionally(t);
             }
             return future;
+        }).toCompletableFuture();
+        result.whenComplete((_, throwable) -> {
+            if (throwable != null) {
+                Thread running = worker.get();
+                if (running != null && running != Thread.currentThread()) {
+                    running.interrupt();
+                }
+            }
         });
+        return result;
     }
 }
